# Approximate-Cholesky-Decomposition

./: .gitignore  CMakeLists.txt  approxChol.cpp  approxCholTypes.h  cache.sh  julia.sh  main.cpp  main.sh  perf.sh  readme.md  run.sh  runtime.sh
julia/: check_julia_code.ipynb  runtime.jl  test_conditionNumber.ipynb  test_fl.ipynb
log/: README.md  bottleneck.md  exact_cycle.txt  flops_log.txt  general_metrics.txt  julia_runtime.txt  performance.ipynb  plot.ipynb  result.xlsx  runtime.txt
log/annotate_approxChol/: perf_annotate_v10000_e10000.txt  perf_annotate_v10000_e20000.txt  perf_annotate_v1000_e1000.txt  perf_annotate_v1000_e2000.txt  perf_annotate_v1000_e5000.txt  perf_annotate_v1000_e8000.txt  perf_annotate_v100_e100.txt  perf_annotate_v100_e500.txt  perf_annotate_v2000_e10000.txt  perf_annotate_v2000_e2000.txt  perf_annotate_v2000_e5000.txt  perf_annotate_v2000_e8000.txt  perf_annotate_v5000_e10000.txt  perf_annotate_v5000_e20000.txt  perf_annotate_v5000_e5000.txt  perf_annotate_v5000_e8000.txt  perf_annotate_v8000_e10000.txt  perf_annotate_v8000_e20000.txt  perf_annotate_v8000_e50000.txt  perf_annotate_v8000_e8000.txt
log/annotate_main/: p_v10000_e10000.txt  p_v10000_e20000.txt  p_v1000_e1000.txt  p_v1000_e2000.txt  p_v1000_e5000.txt  p_v1000_e8000.txt  p_v100_e100.txt  p_v100_e500.txt  p_v10_e10.txt  p_v2000_e10000.txt  p_v2000_e2000.txt  p_v2000_e5000.txt  p_v2000_e8000.txt  p_v5000_e10000.txt  p_v5000_e20000.txt  p_v5000_e5000.txt  p_v5000_e8000.txt  p_v8000_e10000.txt  p_v8000_e20000.txt  p_v8000_e50000.txt  p_v8000_e8000.txt
log/baseline/: cache_log.txt
log/report_main/: pf_v10000_e10000_0.txt  pf_v10000_e20000_0.txt  pf_v1000_e1000_0.txt  pf_v1000_e2000_0.txt  pf_v1000_e5000_0.txt  pf_v1000_e8000_0.txt  pf_v100_e100_0.txt  pf_v100_e500_0.txt  pf_v10_e10_0.txt  pf_v2000_e10000_0.txt  pf_v2000_e2000_0.txt  pf_v2000_e5000_0.txt  pf_v2000_e8000_0.txt  pf_v5000_e10000_0.txt  pf_v5000_e20000_0.txt  pf_v5000_e5000_0.txt  pf_v5000_e8000_0.txt  pf_v8000_e10000_0.txt  pf_v8000_e20000_0.txt  pf_v8000_e50000_0.txt  pf_v8000_e8000_0.txt
perf/: cache.sh  julia.sh  perf.sh  runtime.sh
plot/: performance.ipynb
src/: CMakeLists.txt  approxChol.cpp  approxChol.hpp  approxCholTypes.cpp  approxCholTypes.h  common.h  conditionNumber.cpp  conditionNumber.hpp  main.cpp  pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp  search.hpp  tsc_x86.h
test/: CMakeLists.txt  matrix.cpp  matrix.hpp  perf.sh  runtime.cpp  test.h  test_LDLsolver.cpp  test_LLMatOrd.cpp  test_approxChol.cpp  test_approxChol_orig.cpp  test_approxChol_vec2.cpp  test_approxChol_vec2_merge.cpp  test_approxChol_vec2_opt2.cpp  test_approxChol_vec2_rand.cpp  test_convergence.cpp  test_flops.cpp  test_pcg.cpp  test_search.cpp  test_solver.cpp  test_validation.cpp
